crates/toml/tests/snapshots/invalid/ext/table/ml_basic_string.stderr
TOML parse error at line 1, column 2
  |
1 | ["""table"""]
  |  ^^^^^^^^^^^
keys cannot be multi-line basic strings, expected basic string, literal string
